layout bug fixed

--- a/drip/src/components/header/header.css
+++ b/drip/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header{
     position:fixed;
-    width:100%;
-    height:95vh;
+    width:100vw;
+    height:100vh;
     background-color:#28282b ;
     display: flex;
     justify-content: flex-end;
